---------------------------------------------------------------------------------------------------
Version: 0.69.128
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.127
Date: 2025-11-30
  Changes:
    - Fixed reversing speed for armored locomotives. Due to a mathermatical error, they reversed much slower than intended (during manual drive). Thanks to woolworm2's report.
    - Eyedropper tech now gives a tiny bit of additional reach as a small bonus. So people with zoom-altering mods don't get absolutely nothing.
    - Rubia mod name in library now just says ○🌐Rubia
    - Forcing people to up versions of their dependencies for various upgrades, as I need some upgrades, and I'm not going to handle bug reports/testing on older versions of dependencies.
    - Cheat mode no longer causes a bunch of unknown tech placeholders to stay visible.
    - Fixed incompatibility with Alloy smelting when specific mod settings are enabled.
    - Fixed incompatibility with crushing industry making concrete not work in crapapult.
---------------------------------------------------------------------------------------------------
Version: 0.69.126
Date: 2025-11-14
  Changes:
    - Added the long-awaited eyedrop upgrade. I blacklisted 7 of the really popular zoom mods that this change will break, but let me know if you experience your zoom mods not working as intended. A new Rubia mod setting can be toggled off to disable this behavior, which other mods can also disable if needed.
    - Science packs now have proper descriptions.
---------------------------------------------------------------------------------------------------
Version: 0.69.125
Date: 2025-11-10
  Changes:
    - Rubia now filters vehicle hitbox adjustment a little more stringently.
    - Banned some belt balancer mods from Rubia, because they allow leftward item teleportation.